// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/SqlManagement/StatusTag render ignored status tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-small-tag-wrapper css-194rg1q"
      style="background-color: gray;"
    >
      已忽略
    </span>
  </div>
</body>
`;

exports[`page/SqlManagement/StatusTag render manual_audited status tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-small-tag-wrapper css-1dyku9p"
    >
      已人工审核
    </span>
  </div>
</body>
`;

exports[`page/SqlManagement/StatusTag render sent status tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-small-tag-wrapper css-7o2rh7"
    >
      已推送至其他平台
    </span>
  </div>
</body>
`;

exports[`page/SqlManagement/StatusTag render solved status tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-small-tag-wrapper css-1ubynud"
    >
      已解决
    </span>
  </div>
</body>
`;

exports[`page/SqlManagement/StatusTag render unhandled status tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-small-tag-wrapper css-3qh3vw"
    >
      未处理
    </span>
  </div>
</body>
`;
